--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   image_picker: ^0.8.5+3
   flutter_pytorch: any
   image: ^3.0.7
+  camera: ^0.11.1
+  flutter_vision: ^1.1.4
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
