--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   camera: ^0.11.1
   flutter_vision: ^1.1.4
   flutter_speed_dial: ^7.0.0
+  google_fonts: ^6.2.1
+  lottie: ^3.3.0
 
 dev_dependencies:
   flutter_test:
