--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   google_fonts: ^6.2.1
   lottie: ^3.3.0
+  fl_chart: ^0.70.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
