--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "hackathon_test" "\0"
+            VALUE "FileDescription", "hackathon" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "hackathon_test" "\0"
+            VALUE "InternalName", "hackathon" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "hackathon_test.exe" "\0"
-            VALUE "ProductName", "hackathon_test" "\0"
+            VALUE "OriginalFilename", "hackathon.exe" "\0"
+            VALUE "ProductName", "hackathon" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
